# fuzzyStringMatching

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configuration.json  install_dependencies.sh  jni.cpp  main.cpp  reader_test.cpp  relationships.h  serializer.cpp
algorithms/: binsearch.h
conceptnet/: utils.cpp
conceptnet/deserialization/: conceptnet_edge_deserialization.cpp  conceptnet_edge_deserialization.h
datasets/: main_data_parsers.cpp
datasets/GDELT/: GDELT.cpp  GDELT.h  GDELTArgument.cpp  GDELTArgument.h  GDELTPlace.cpp  GDELTPlace.h  GDELTRelation.cpp  GDELTRelation.h  GDELTTime.cpp  GDELTTime.h
datasets/ICEWS/: ICEWS.cpp  ICEWS.h  ICEWSArgument.cpp  ICEWSArgument.h  ICEWSPlace.cpp  ICEWSPlace.h
datasets/NELL/: NELL.cpp  NELL.h  NELLArgument.cpp  NELLArgument.h  NELLRelation.cpp  NELLRelation.h
datasets/Phoenix/: Phoenix.cpp  Phoenix.h  PhoenixArgument.cpp  PhoenixArgument.h  PhoenixPlace.cpp  PhoenixPlace.h  PhoenixTime.cpp  PhoenixTime.h
datasets/helpers/: Helpers.cpp  Helpers.h
fmatch/: FuzzyMatch_FDContainer.cpp  FuzzyMatch_FDContainer.h  PollMap.h  csv_serializer.cpp  libfuzzymatch.cpp  libfuzzymatch.h  libfuzzymatching_test.cpp  org_ufl_hypogator_jackb_fuzzymatching_TwoGramIndexerJNI.h
fmatch/LongStringValueMultimapIndexer/: LSVM_Primary.cpp  LSVM_Primary.h  LSVM_Secondary.cpp  LSVM_Secondary.h
fmatch/StringLongHashMultimapIndexer/: SLHM_Primary.cpp  SLHM_Primary.h  SLHM_Secondary.cpp  SLHM_Secondary.h
fmatch/StringToTwoGramSizeHashMultimapIndexer/: STTGSHM_Primary.cpp  STTGSHM_Primary.h  STTGSHM_Secondary.cpp  STTGSHM_Secondary.h
fromJava/: LinkedHashMultimap.h  classes.h  evaluateHashes.c  evaluateHashes.h  org_ufl_hypogator_jackb_traversers_conceptnet_JNIEntryPoint.h  trimmers.cpp  trimmers.h
include/algorithms/: binsearch.h
include/structures/: LinkedHashMultimap.h  PollMap.h  fixed_bimap.h
include/utils/: java_classes_facsimile.h  stringuitls.h
include/versions/v0.1/: FuzzyMatch_FDContainer.h  libfuzzymatch.h
include/versions/v0.2/: FuzzyMatch.h  FuzzyMatchSerializer.h  FuzzyMatchSerializerSEC.h
internal_state/: InternalState.cpp  InternalState.h
mains/: csv_serializer.cpp  libfuzzymatching_test.cpp  main.cpp
merging/: CSVIterator.cpp  CSVIterator.h  SplitStringIterator.cpp  SplitStringIterator.h  csv_istream.cpp  csv_istream.h
merging/conceptnet/: ConceptNet5Dumps.cpp  ConceptNet5Dumps.h  utils.cpp  utils.h
merging/fuzzymatch/: FuzzyMatch.cpp  FuzzyMatch.h  FuzzyMatchSerializer.cpp  FuzzyMatchSerializer.h  FuzzyMatchSerializerSEC.cpp  FuzzyMatchSerializerSEC.h
merging/graph_conceptnet/: GraphQueryIterator.cpp  GraphQueryIterator.h
merging/jsons/: idToOffsetHandler.cpp  idToOffsetHandler.h  objectToMultipleStrings.cpp  objectToMultipleStrings.h
merging/main_memory_graph/: main_memory_lemon_graph.cpp  main_memory_lemon_graph.h
modules/: FindLemon.cmake
numeric/: ProgressBar.cpp  ProgressBar.h  compares.cpp  compares.h
pgdump/: json.hpp  libjni.cpp  libjni_test.cpp  serializer.cpp
rbtree/: Node.h
relationships/: RelationshipTypes.cpp  RelationshipTypes.h
serializers/: SerializeGraphCollection.cpp  Streamers.cpp  Streamers.h
serializers/collections/: GraphCollectionSerializeSteps.cpp  GraphCollectionSerializeSteps.h  collection_consts.h.h
serializers/commons/: Serialize.cpp  Serialize.h  VertexIterator.cpp  VertexIterator.h  globals.h  structure.cpp  structure.h
serializers/utils/: NumberToString.h  dovetailing.h  fwrite.cpp  fwrite.h  mmapFile.cpp  mmapFile.h
src/utils/: evaluateHashes.c  memory_utils.cpp  stringuitls.cpp  trimmers.cpp
utils/: FileMemoryAllocd.cpp  FileMemoryAllocd.h  fixed_bimap.h  memory_utils.cpp  memory_utils.h  stringuitls.cpp  stringuitls.h
utils/rbtree/: Node.h  rbtree.h
(+43 files in other folders)
